<resources>
    <string name="app_name">PsyHeart</string>
    <string name="start">Let\'s Start!</string>
    <string name="msg_splash_page">Find peace and balance in your life through the power of sound therapy</string>
    <string name="title_splash_page">Healing Sounds and Sound Therapy</string>
    <string name="splash_background">splash background</string>
    <string name="login_background">Login background</string>
    <string name="title_login">Login</string>
    <string name="email">Email</string>
    <string name="email_invalid">Invalid email format</string>
    <string name="password">Password</string>
    <string name="pwd_min8_msg">Password must be at least 8 characters long and contains symbol</string>
    <string name="login">Sign In</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="signup_bg">sign up background</string>
    <string name="msg_login">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="question1">What kind of condition do you feel?</string>
    <string name="button_depression">Depression</string>
    <string name="button_anxiety">Anxiety</string>
    <string name="button_sleeplessness">Sleeplessness</string>
    <string name="question2">What therapeutic needs do you have?</string>
    <string name="button_relaxation">Relaxation</string>
    <string name="button_motivation">Motivation</string>
    <string name="button_positive_emotion_reinforcement">Positive Emotion Reinforcement</string>
    <string name="button_submit">Submit</string>
    <string name="questionnaire_guide">Questionnaire Guide</string>
    <string name="questionnaire_guide_text_1">Please take a moment to answer <b>a few simple questions.</b>
        Your responses will help us better understand your specific needs and preferences,
        which is crucial for recommending the most suitable sound therapy treatment.
    </string>
    <string name="questionnaire_guide_text_2">
       Sound therapy has been shown to be beneficial in improving mental and physical health,
        including reducing stress and anxiety, and also improving sleep quality.
    </string>
    <string name="questionnaire_guide_text_3">
      We are committed to providing you with the best possible sound therapy experience.
        Please answer the questions honestly and openly.
    </string>
    <string name="next_button_text">Next</string>
    <string name="sign_in">Sign In</string>
    <string name="msg_logout_page">Thank you for trusting us to accompany you throughout your days</string>
    <string name="title_logout_page">See you next time!</string>
    <string name="logout_background">Logout background</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="image_discover">image discover</string>
    <string name="relax_title">Relax</string>
    <string name="discover_title_msg">Find Your Sound Therapy</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="signup_msg">Register</string>
    <string name="home_title_msg">Your current condition is </string>
    <string name="home_msg">This is recommended songs for you</string>
    <string name="song_title">Song Title</string>
    <string name="artist_name">Artist Name</string>
    <string name="time_song">time song</string>
    <string name="image_song">image song</string>
    <string name="image_play_music">image play music</string>
    <string name="previous_desc">previous music desc</string>
    <string name="play_pause_desc">play pause music desc</string>
    <string name="next_desc">next music desc</string>
    <string name="time_start">00:00</string>
    <string name="time_finish">03:45</string>
    <string name="questionnaire_msg">What kind of condition do you feel?</string>
    <string name="option1">Depression</string>
    <string name="option2">Anxiety</string>
    <string name="option3">Sleeplessness</string>
    <string name="profile_title">PsyHeart</string>
    <string name="id_email">psyheart@gmail.com</string>
    <string name="edit_account">Edit Account</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="logout">Logout</string>
    <string name="title_personal_data">Personal Data</string>
    <string name="title_ic_back">Back</string>
    <string name="title_ic_visible">Visible</string>
    <string name="edit_profile_title_msg">Save Changes</string>
    <string name="edit_profile_new_pwd">New Password</string>
    <string name="edit_profile_confirm_pwd">Confirm New Password</string>
    <string name="update_questionnaire">Update</string>
    <string name="msg_update">Update your condition</string>
    <string name="indonesian">Indonesian</string>
    <string name="english">English</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme </string>
    <string name="continue_msg">Continue</string>
    <string name="congrats">Congrats!</string>
    <string name="desc_detail_discover" translatable="false">Soft rhythm and slow tempo</string>
    <string name="title_detail_discover" translatable="false">Sleep Therapy</string>
    <string name="select_lang">Select Language</string>
    <string name="select_theme">Select Theme</string>
    <string name="fill_required">Please fill the required field</string>
    <string name="pwd_not_match">Password confirmation doesn\'t match</string>
    <string name="success_update_profile">Profile updated successfully</string>
</resources>