<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/listQuestionnaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:padding="16dp"
        android:text="@string/questionnaire_msg"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <RadioButton
            android:id="@+id/radioButtonDepression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option1" />

        <RadioButton
            android:id="@+id/radioButtonAnxiety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option2" />

        <RadioButton
            android:id="@+id/radioButtonSleeplessness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option3" />

    </RadioGroup>

</LinearLayout>