<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/iconMusic"
            android:layout_width="48dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_song"
            android:paddingEnd="8dp"
            android:src="@drawable/ic_music"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/iconPlayMusic"
            android:layout_toEndOf="@id/iconMusic"
            android:orientation="vertical">

            <TextView
                android:id="@+id/songTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/songArtistTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/timeSongTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_song"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iconPlayMusic"
            android:layout_width="48dp"
            android:layout_height="64dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingStart="8dp"
            android:src="@drawable/ic_play_music"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/image_play_music" />

    </RelativeLayout>
</LinearLayout>
